prevent overflow of images
#3

--- a/src/wikipedia.css
+++ b/src/wikipedia.css
@@ -57,6 +57,7 @@ body {
 img {
   border: 0;
   vertical-align: middle;
+  max-width: 100%;
 }
 
 hr {
